fix user login and auto mapper
