# src/TTAG.App/Controllers/UsersController.cs
@@ -1,7 +1,10 @@
 ﻿using System;
 using System.Collections.Generic;
 using System.Linq;
+using System.Security.Claims;
 using System.Threading.Tasks;
+using AutoMapper;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
 using TTAG.Domain.Model;
@@ -17,33 +20,44 @@ namespace TTAK.Controllers
     {
         private readonly ILogger<UsersController> logger;
         private readonly IUserService service;
+        private readonly IMapper mapper;
+        private readonly IUserRepository userRepository;
 
-        public UsersController(ILogger<UsersController> logger, IUserService service)
+        public UsersController(ILogger<UsersController> logger, IUserService service, IMapper _mapper, IUserRepository userRepository)
         {
             this.logger = logger;
             this.service = service;
+            mapper = _mapper;
+            this.userRepository = userRepository;
         }
 
         [HttpPost]
-        public async Task<User> AddAsync(User art)
+        public async Task<User> AddAsync(User user)
         {
-            return await this.service.AddOrUpdateAsync(art).ConfigureAwait(false);
+            return await this.service.AddOrUpdateAsync(user).ConfigureAwait(false);
         }
 
         [HttpPost]
-        public async string Login(string Username,string Password)
+        public IActionResult Login(string Username, string Password)
         {
-            return await this.service.Login(Username, Password).ConfigureAwait(false);
+            return Ok(service.Login(Username, Password));
         }
 
-        [HttpPost]
+        [HttpGet]
+        public async Task< IActionResult> GetUser(string Id)
+        {
+            return Ok(mapper.Map<TTAG.Domain.Model.User,UserViewModel>(await userRepository.GetByIdAsync(Id)));
+        }
+
+
+        [HttpGet("TestYourToken")]
         [Authorize]
-        public async string Login(string Username, string Password)
+        public IActionResult TestYourToken(string Username, string Password)
         {
             var identity = User.Identity as ClaimsIdentity;
             IEnumerable<Claim> claims = identity.Claims;
             var idclaim = claims.Where(x => x.Type == "Id").FirstOrDefault();
-            return idclaim.Value; ;
+            return Ok(idclaim.Value);
         }
     }
 }
