# src/TTAG.Domain/User/Model/UserViewModel.cs
@@ -1,0 +1,18 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace TTAG.Domain.Model
+{
+   public class UserViewModel
+    {
+        public string Id { get; set; }
+        public string FirstName { get; set; }
+
+        public string LastName { get; set; }
+
+        public string UserName { get; set; }
+
+        public string Email { get; set; }
+    }
+}
